--- a/Minha pagina Christian Ferreira/index.html
+++ b/Minha pagina Christian Ferreira/index.html
@@ -18,21 +18,20 @@
                         <div class="trace"></div>
                         <div class="trace"></div>
                     </label>
-                    <div class="menu">
+                    <div class="menu"> </div>
                         <nav class="menu-items">
                             <ul>
                                 <li>
                                     <a href="#">Inicio</a>
                                 </li>
                                 <li>
-                                    <a href="#GitHub">Sobre</a>
+                                    <a href="#">Sobre</a>
                                 </li>
                                 <li>
                                     <a href="#">Projetos</a>
                                 </li>
                             </ul>
                         </nav>
-                    </div>
                 </div>
             </div>
         </div>
